fix: show HP percentage and fix fighter name spacing
-Added HP percentage display beside fighter names.
-Unified HTML structure to use <strong class='name'>.
-Fixed .name margin rendering using block.

--- a/fight-project/assets/css/styles.css
+++ b/fight-project/assets/css/styles.css
@@ -19,6 +19,12 @@
     background-color: red;
     border-radius: 5px;
     width: 10%;
+    
+}
+
+.name {
+    display: block;
+    margin: 3px;
 }
 
 .log {
